# ai-lsp

./: .coverage  README.md  ai-lsp-otel.jsonl  coverage.json  dataset.json  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
src/ai_lsp/: agent.py  cli.py  main.py  models.py
src/ai_lsp/finetune/: README.md  __init__.py  cli.py  dataset.py  inference.py  serve.py  train.py
tests/: conftest.py  test_cli.py
