[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "ai-lsp"
dynamic = ["version"]
description = "AI-powered Language Server with intelligent diagnostics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "benomahony", email = "ben@example.com" }]
dependencies = [
  "pygls>=1.3.0",
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "pydantic-ai>=0.4.11",
  "pydantic-settings>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/benomahony/ai-lsp"
Repository = "https://github.com/benomahony/ai-lsp"

[project.scripts]
ai-lsp = "ai_lsp.main:app"
